Refactoring, not tested

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,9 @@
   "general": {
 	"profile": "profile_1",
 	"foreground": false,
-	"logconsole": false
+	"logconsole": false,
+	"logfile": false,
+	"loggername": "PyFoehn"
   },
   "hardware": {
 	"disablefan": false,
